--- a/SmartPlant_Web/CSS/style.css
+++ b/SmartPlant_Web/CSS/style.css
@@ -1,84 +1,155 @@
+
+/* Affecting whole site*/
 * {
     box-sizing: border-box;
 }
 
+/* Only affecting body of HTML */
 body {
     font-family: Arial;
-    padding: 10px;
-    background: #f1f1f1;
+    padding: 20px 50px;    
+    background-color: #d4d9e2;
+    margin-top: 4%;
+    margin-bottom: 4%;
 }
+
+/* Buttons and Inputs/Forms*/
+/* Button */
+.button {
+    background-color: #86A789;
+    border: 1px solid gray;
+    font-size: 16px;
+    color: gray;
+    padding: 8px 16px;
+    border-radius: 4px;
+    margin-top: 4px;
+    margin-right: 6px;
+    display: inline-block;
+    cursor: pointer;
+}
+
+/* Button animation */
+.button:hover {
+    background-color: #6B856D;
+    color: white;
+}
+
+/* Input/Form */
+input[type=number] {
+    padding: 8px 16px;
+    border: 1px solid gray;
+    border-radius: 4px;
+    margin-top: 4px;
+    margin-right: 6px;
+}
+
 
 
 .header {
-    padding: 30px;
+    padding: 8px;
     text-align: center;
-    background: white;
-    border-top-left-radius: 12px;
-    border-top-right-radius: 12px;
+    background: #f0f4f6;
+    border-color: #86A789;
+    border-top-left-radius: 6px;
+    border-top-right-radius: 6px;
 }
 
+.header h2, p {
+    text-transform: uppercase;
+    color: #86A789;
+}
+
+/* navbar */
 .topnav {
     overflow: hidden;
-    background-color: #333;
-    border-bottom-left-radius: 12px;
-    border-bottom-right-radius: 12px;
+    background-color: #86A789;
+    border-bottom-left-radius: 6px;
+    border-bottom-right-radius: 6px;
+}
+
+/* Logo postion 1*/
+.topnav img {
+    float: left;
+    padding-left: 14px;
 }
 
 /* Links */
-.topnav a {
-    float: left;
-    display: block;
-    color: #f2f2f2;
+.topnav a {    
+    display: inline-block;
+    color: gray;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
 }
 
-
+/* Hover animation */
 .topnav a:hover {
-    background-color: #ddd;
-    color: black;
+    background-color: #6B856D;
+    color: white;
+    border-radius: 4px;
 }
 
 /* Left column off-set */
 .leftcolumn {
     float: left;
-    width: 50%;
+    width: 65%;
 }
 
 /* Right column off-set */
 .rightcolumn {
     float: left;
-    width: 50%;
-    background-color: #f1f1f1;
+    width: 35%;    
     padding-left: 20px;
 }
 
 /* For special content*/
 .contentbox {
-    background-color: #aaa;
+    background-color: #fdfdfd;
     width: 100%;
     padding: 20px;
-    border-radius: 12px;
+    border-radius: 6px;
+}
+
+.contentbox h3 {
+    margin: auto;
+    margin-top: 6%;
+    width: fit-content;
+    border-radius: 6px;
 }
 
 /* Box for the content */
-.card {
-    background-color: white;
+.card {    
+    background-color: #f0f4f6;
     padding: 20px;
     margin-top: 20px;
-    border-radius: 12px;
+    border-radius: 6px;
+}
+
+/* Styling for headers in card-class */
+.card h2, h5 {
+    text-align: center;
+    text-transform: uppercase;
+    color: #A4BC92;
 }
 
 /* Scroll */
 .scroll {
-    display: block;
-    border: 0px solid red;
+    display: block;    
     padding: 5px;
     margin-top: 5px;
+    margin-bottom: 5px;
     width: 100%;
-    height: 200px;
+    height: 100%;
     overflow-y: scroll;
+}
+
+/* Styling for list elements */
+.scroll li {
+    padding: 6px;    
+    background-color: #ecf1f5;
+    margin-top: 16px;
+    border: 1px solid;
+
 }
 
 /* After space */
@@ -89,13 +160,21 @@ body {
 }
 
 /* Footer */
-.footer {
-    padding: 20px;
-    text-align: center;
-    background: #ddd;
+.footer {    
+    padding: 8px;    
+    border-top: 46px solid;
+    border-color: #86a789;
+    background: #f0f4f6;
     margin-top: 20px;
-    border-radius: 12px;
+    border-radius: 6px;
 }
+
+.footer h3, h6 {
+    text-align: center;
+    text-transform: uppercase;
+    color: #86A789;
+}
+
 
 /* Responsive */
 @media screen and (max-width: 800px) {
